[workspace]
resolver = "2"
members = [
    ".",
    "migration",
]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "bwb"
path = "src/lib.rs"

[[bin]]
name = "bwb"
path = "src/main.rs"

[dependencies]
alloy = "2.1.0"
anyhow = "1.0.102"
axum = "0.8.9"
jsonwebtoken = "10.4.0"
orso = "0.0.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
turso = "0.6.1"
